fix font not showing issue

--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,24 @@
-@import "tailwindcss";
-
 
 /* fonts */
 @font-face {
-    font-family: inter;
-    src: url(/fonts/Inter/Inter_18pt-Regular.ttf);
+    font-family: "inter";
+    src: url(/fonts/Inter/Inter_18pt-Regular.ttf) format("woff2");
 }
 @font-face {
-    font-family: intermed;
-    src: url(/fonts/Inter/Inter_18pt-Medium.ttf);
+    font-family: "intermed";
+    src: url(/fonts/Inter/Inter_18pt-Medium.ttf) format("woff2");
 }
 @font-face {
-    font-family: geistmed;
-    src: url(/fonts/Geist_Mono/GeistMono-Medium.ttf);
+    font-family: "geistmed";
+    src: url(/fonts/Geist_Mono/GeistMono-Medium.ttf) format("woff2");
 }
 
 @font-face {
-    font-family: geist;
-    src: url(/fonts/Geist_Mono/GeistMono-Regular.ttf);
+    font-family: "geist";
+    src: url(/fonts/Geist_Mono/GeistMono-Regular.ttf) format("woff2");
 }
+
+@import "tailwindcss";
 
 @custom-variant dark (&:where(.dark, .dark *));
 
